# deadparrot

./: .gitignore  COPYING  README.rst  runtests.py
.github/workflows/: build.yml
src/: CMakeLists.txt  Makefile  abstract.c  call.c  code.c  deadparrot.h  dict.c  eval.c  float.c  frame.c  gc.c  hash.c  import.c  interp.c  list.c  long.c  module.c  object.c  private.h  time.c  tstate.c  type.c  unicode.c  weakref.c
tests/: setup.py  test_deadparrot.py  test_deadparrot_cext.c  utils.py
